<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star_wars_name_generator"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/firstname_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"

            android:layout_marginStart="8dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/firstname_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name"
            android:layout_marginStart="8dp"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lastname_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_marginStart="8dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/lastname_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name"
            android:layout_marginStart="9dp"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cityborn_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_born_in"
            android:layout_marginStart="8dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/cityborn_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city_born_in"
            android:layout_marginStart="8dp"
            android:inputType="text"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/maidenname_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maiden_name"
            android:layout_marginStart="8dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/maidenname_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mother_maiden_name"
            android:layout_marginStart="8dp"
            android:inputType="text"/>
    </LinearLayout>

    <TextView
        android:id="@+id/starwarname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star_wars_name"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/generate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_name"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp" />

</LinearLayout>